--- a/.gitignore
+++ b/.gitignore
@@ -13,18 +13,21 @@ build/
 develop-eggs/
 dist/
 downloads/
-dataset/
 eggs/
 .eggs/
 lib/
 lib64/
-models/
 parts/
 sdist/
 var/
 *.egg-info/
 .installed.cfg
 *.egg
+
+#Custom
+dataset/
+*.sqlite3
+models/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
